--- a/app/src/main/res/layout/activity_add_order.xml
+++ b/app/src/main/res/layout/activity_add_order.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddNewOrder">
+    tools:context=".MajorViews.AddNewOrder">
 
     <TextView
         android:id="@+id/textView"
@@ -22,8 +22,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
-        android:text="Cargo"
         android:onClick="changeToCargo"
+        android:text="Cargo"
+        android:textColor="@android:color/holo_blue_dark"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintStart_toEndOf="@+id/textView"
