--- a/app/src/main/res/layout/fragment_add_cargo.xml
+++ b/app/src/main/res/layout/fragment_add_cargo.xml
@@ -5,9 +5,10 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:conhint=".addCargo">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         tools:conhint=".addCargo">
 
         <EditText
@@ -51,8 +52,8 @@
             android:layout_marginStart="200dp"
             android:layout_marginTop="30dp"
             android:hint="Trucks Required"
-            android:textSize="20sp"
             android:inputType="numberDecimal"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/weight" />
 
@@ -66,13 +67,13 @@
             android:inputType="numberDecimal"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/truckType" />
+            app:layout_constraintTop_toBottomOf="@+id/loadingDateEt" />
 
         <EditText
-            android:id="@+id/loadingDate"
+            android:id="@+id/loadingDateEt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="200dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:hint="Loading Date"
             android:textSize="20sp"
@@ -83,12 +84,12 @@
             android:id="@+id/pickupLoc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="200dp"
             android:layout_marginTop="30dp"
             android:hint="Pickup Location"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/loadValue" />
+            app:layout_constraintTop_toBottomOf="@+id/truckReq" />
 
         <EditText
             android:id="@+id/dropLoc"
@@ -98,20 +99,19 @@
             android:layout_marginTop="30dp"
             android:hint="Drop Location"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@+id/pickupLoc"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/loadingDate" />
+            app:layout_constraintTop_toBottomOf="@+id/loadingDateEt" />
 
         <Button
             android:id="@+id/okc"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="50dp"
-            android:text="Add Cargo"
 
+            android:text="Add Cargo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pickupLoc" />
+            app:layout_constraintTop_toBottomOf="@+id/dropLoc" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
