--- a/app/src/main/res/layout/activity_ack.xml
+++ b/app/src/main/res/layout/activity_ack.xml
@@ -3,16 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_img"
+    >
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="300dp"
         android:text="New User added successfully"
-        android:textColor="@color/teal_200"
-        android:textSize="30sp"
+        android:textColor="#fff"
+        android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,6 +25,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="Back to Home"
+        android:background="@drawable/round_btn"
+        android:textColor="#fff"
+        android:width="150dp"
         android:onClick="backToHome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
