--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:background="@color/white"
         android:onClick="showCargoList"
         android:text="CargoList"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="#eac37e"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -40,10 +40,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
-        android:background="@color/white"
         android:onClick="showLoadList"
         android:text="LoadList"
         android:textSize="25sp"
+        android:textColor="#eac37e"
         app:layout_constraintBottom_toBottomOf="@+id/cargoBt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/cargoBt"
