--- a/app/src/main/res/layout/fragment_add_load.xml
+++ b/app/src/main/res/layout/fragment_add_load.xml
@@ -88,6 +88,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:text="Add Load"
+            android:width="130dp"
+            android:background="@drawable/round_btn"
+            android:textColor="#fff"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/comments" />
